deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msp-homepage
  namespace: www
spec:
  selector: { app: msp-homepage }
  ports: [{ port: 80, targetPort: 3000 }]
